# mock-default

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  cliff.toml
.github/workflows/: ci.yaml  release.yaml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: mod.rs
crates/core/tests/ui/: duplicate_enum_variant_attribute.rs  duplicate_enum_variant_attribute.stderr  feature_not_found.rs  feature_not_found.stderr  missing_enum_variant_attribute.rs  missing_enum_variant_attribute.stderr  uknown_container_attribute.rs  unknown_container_attribute.stderr
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
