[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["gibbz00 <gabrielhansson00@gmail.com>"]
edition = "2021"
exclude = ["/.github"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gibbz00/mock-default"
version = "0.1.0"

[workspace.dependencies]
mock-default-macros = { path = "crates/macros" }

[workspace.lints.rust]
missing_docs = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
self_named_module_files = "deny"

[profile.dev]
debug = 0
strip = "debuginfo"
