[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["gibbz00 <gabrielhansson00@gmail.com>"]
description = "Derivable data mocking for tests"
edition = "2021"
exclude = ["/.github"]
keywords = ["derive", "mocking", "testing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gibbz00/damock"
version = "0.1.1"

[workspace.dependencies]
damock-macros = { path = "crates/macros", version = "0" }

[workspace.lints.rust]
missing_docs = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
self_named_module_files = "deny"

[profile.dev]
debug = 0
strip = "debuginfo"
