[package]
name = "mock-default"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
mock-default-macros.workspace = true

[dev-dependencies]
trybuild = "1.0"
