[package]
name = "damock"

authors.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
damock-macros.workspace = true

[dev-dependencies]
trybuild = "1.0"
