[package]
name = "damock-macros"

authors.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
